--- a/Web Data Management/Project3/yelp.html
+++ b/Web Data Management/Project3/yelp.html
@@ -11,7 +11,7 @@ Google Map Basic Code is Refered from following site provided in Project Descrip
     <meta charset="utf-8"/>
     <script type="text/javascript" src="yelp.js"></script>	
 	<!--
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhDQZY3UcQhVNJYglPmqO7XdeYFEbgAeY&callback=initMap&libraries=&v=weekly" defer ></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=&v=weekly" defer ></script>
 	-->
   </head>
   <body onload="initialize();"  >
@@ -22,7 +22,7 @@ Google Map Basic Code is Refered from following site provided in Project Descrip
 	<br/>
 	<br/>
 	<div id="googleMap" style="width:600px;height:500px; left: 10px;"></div>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhDQZY3UcQhVNJYglPmqO7XdeYFEbgAeY&callback=initMap&libraries=&v=weekly"  ></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=&v=weekly"  ></script>
 	<br/>
 	<br/>
 	<div id="output"><h2>Search Results:</h2>&nbsp;</div>
